# tibet-conformance-vectors

./: LICENSE  README.md  pyproject.toml
drafts/: draft-vandemeent-tibet-causal-time-00.md  draft-vandemeent-tibet-causal-time-00.txt  draft-vandemeent-tibet-semantic-surface-manifest-00.txt
examples/: check-conformance-vectors.py
src/tibet_conformance_vectors/: __init__.py  cli.py
src/tibet_conformance_vectors.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tibet_conformance_vectors/data/: v1.jsonl
src/tibet_conformance_vectors/drafts/: draft-vandemeent-tibet-semantic-surface-manifest-00.md
