[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tibet-conformance-vectors"
version = "0.1.0"
description = "Canonical conformance vectors and IETF drafts for the TIBET continuity ecosystem — reference inputs for external evaluation of tibet-continuityd, tibet-drop, and related implementations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jasper van de Meent", email = "info@humotica.com"},
    {name = "Root AI", email = "root_idd@humotica.nl"},
    {name = "Codex", email = "codex@humotica.nl"},
]
keywords = [
    "tibet", "conformance", "test-vectors",
    "ietf-drafts", "causal-time", "semantic-surface-manifest",
    "audit", "provenance", "humotica",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
tibet-vectors = "tibet_conformance_vectors.cli:main"

[project.urls]
Homepage = "https://humotica.com"
IETF = "https://datatracker.ietf.org/doc/draft-vandemeent-tibet-causal-time/"
Repository = "https://github.com/jaspertvdm/tibet-conformance-vectors"

[tool.setuptools.package-data]
tibet_conformance_vectors = ["data/*.jsonl", "drafts/*.txt", "drafts/*.md"]
